# osg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
config/: models.json
earth/: scene.earth
scripts/: pack_mac.sh  pack_win.bat  prepare_data.sh
src/: OsgbModelLoader.cpp  OsgbModelLoader.h  PerfHud.cpp  PerfHud.h  SceneLoader.cpp  SceneLoader.h  main.cpp
